# python-monkey-patching-example

./: main.api.py  main.py  main.v2.py  pyproject.toml
plugins/: patch_response.py
plugins_stable/: patch_reponse.py
