[tool.poetry]
name = "monkey-patching-examples"
version = "0.1.0"
description = ""
authors = ["Henrik Nygren <nygrenh@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
ipython = "^8.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
